# Ultron

./: .gitignore  CLAUDE.md  README.md  ULTRON.md  start_ultron.ps1  ultron.ps1
.ultron-feed/: 2026-05-16.md  README.md
ULTRON_A/: README.md
ULTRON_B/ultron/: README.md
ULTRON_B/ultron/crates/ultron-ghost/: Cargo.toml
ULTRON_B/ultron/crates/ultron-ghost/src/: publisher.rs
ULTRON_B/ultron/crates/ultron-memory-engine/: Cargo.toml
ULTRON_B/ultron/crates/ultron-memory-engine/src/: learning.rs  main.rs
ULTRON_B/ultron/crates/ultron-types/: Cargo.toml
ULTRON_B/ultron/crates/ultron-types/src/: events.rs
ULTRON_B/ultron/python/ultron_voice/: audio_io.py
ULTRON_B_COMPLETE/ultron/: MODULE_C_CHANGES.md
ULTRON_B_COMPLETE/ultron/python/: bridge_test.py  insight_pulse.py  requirements.txt  test_voice.py  voice_engine.py
ULTRON_B_COMPLETE/ultron/python/ultron_voice/: config.py  state_machine.py  stt.py  tts.py
ULTRON_B_T2/ultron/: README.md
ULTRON_B_T2/ultron/python/: agent_service.py  audio_probe.py  audition_voices.py  bridges_service.py  claude_feed_service.py  clipboard_service.py  code_service.py  conftest.py  context_preserver_service.py  context_tunnel_service.py  dailydata_service.py  debug_code_ws.py  dopamine_service.py  dream_service.py  emotion_env_service.py  emotion_service.py  flow_service.py  focus_shield_service.py  force_refresh.py  hud.py  hud_service.py  interrupt_service.py  kg_indexer.py  kg_service.py  list_mics.py  llm_service.py  mic_diag.py  money_service.py  planner_service.py  privacy_service.py  proactive_service.py  probe_audio.py  readiness_service.py  recall_service.py  record_wake_samples.py  reentry_service.py  repl.py  requirements.txt  selftuner_service.py  smoke_brightness.py  (+62 more)
ULTRON_B_T2/ultron/python/spectacle_hud/: index.html
ULTRON_B_T2/ultron/python/ultron_agents/: __init__.py  agent.py  config.py  mesh.py  runner.py  service.py  state.py
ULTRON_B_T2/ultron/python/ultron_bridges/: __init__.py  app_detail.py  base.py  browser_tab.py  claude_session.py  config.py  dev_watch.py  github.py  google.py  service.py  spotify.py
ULTRON_B_T2/ultron/python/ultron_claude_feed/: __init__.py  config.py  service.py
ULTRON_B_T2/ultron/python/ultron_clipboard/: __init__.py  config.py  watcher.py
ULTRON_B_T2/ultron/python/ultron_code/: __init__.py  config.py  index.py  parser.py  scanner.py  service.py
ULTRON_B_T2/ultron/python/ultron_context_preserver/: __init__.py  config.py  markdown.py  service.py  snapshot.py
ULTRON_B_T2/ultron/python/ultron_context_tunnel/: __init__.py  tunnel.py
ULTRON_B_T2/ultron/python/ultron_dailydata/: __init__.py  config.py  news.py  service.py  stocks.py  weather.py
ULTRON_B_T2/ultron/python/ultron_dopamine/: __init__.py  config.py  scorer.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_dream/: __init__.py  config.py  engine.py
ULTRON_B_T2/ultron/python/ultron_emotion/: __init__.py  config.py  detector.py  lexicon.py  service.py  state.py
ULTRON_B_T2/ultron/python/ultron_emotion_env/: __init__.py  reactor.py
ULTRON_B_T2/ultron/python/ultron_flow/: __init__.py  config.py  detector.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_focus_shield/: __init__.py  shield.py
ULTRON_B_T2/ultron/python/ultron_hud/: __init__.py  aggregator.py  config.py  service.py  tray.py
ULTRON_B_T2/ultron/python/ultron_interrupts/: __init__.py  config.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_kg/: __init__.py  config.py  graph.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_knowledge/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  store.py
ULTRON_B_T2/ultron/python/ultron_llm/: client_claude.py  client_ollama.py  config.py  context.py  conversation.py  intent_router.py  personality.py  preference.py  service.py  state.py  tool_parser.py  vision.py  web_search.py
ULTRON_B_T2/ultron/python/ultron_money/: __init__.py  analytics.py  config.py  models.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_planner/: __init__.py  config.py  models.py  planner.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_privacy/: __init__.py  anonymizer.py  gate.py
ULTRON_B_T2/ultron/python/ultron_proactive/: __init__.py  config.py  engine.py  predictor.py  social_radar.py
ULTRON_B_T2/ultron/python/ultron_readiness/: __init__.py  calculator.py  config.py  service.py  state.py  store.py
ULTRON_B_T2/ultron/python/ultron_recall/: __init__.py  config.py  extractor.py  reflector.py  retriever.py  service.py  store.py
ULTRON_B_T2/ultron/python/ultron_reentry/: __init__.py  composer.py  config.py  context.py  detector.py  service.py
ULTRON_B_T2/ultron/python/ultron_selftuner/: __init__.py  config.py  observer.py  reflector.py  service.py  tuner.py
ULTRON_B_T2/ultron/python/ultron_sysinfo/: config.py  (+3 more)
ULTRON_C/ultron/python/: bridge_test.py  requirements.txt  test_llm.py
ULTRON_D/ultron/: Cargo.toml  README.md
ULTRON_D/ultron/crates/ultron-core/: Cargo.toml
ULTRON_D/ultron/crates/ultron-insight-pulse/: Cargo.toml
ULTRON_D/ultron/crates/ultron-insight-pulse/src/: signal_state.rs
ULTRON_D/ultron/python/: requirements.txt  ultron_bridge.py
ULTRON_D/ultron/service/: uninstall.ps1
ULTRON_H/ultron/: .gitignore  Cargo.toml
ULTRON_H/ultron/crates/ultron-quantum-log/: Cargo.toml
ULTRON_H/ultron/crates/ultron-quantum-log/src/: lib.rs
ULTRON_H/ultron/python/: bridge_test.py
ULTRON_H/ultron/service/: install.ps1
ULTRON_O/ultron/: README.md
ULTRON_O/ultron/python/: bridge_test.py
ULTRON_Q_COMPLETE/ultron/: Cargo.toml  README.md
ULTRON_Q_COMPLETE/ultron/crates/ultron-core/src/: config.rs
ULTRON_Q_COMPLETE/ultron/crates/ultron-core/src/perception/: metrics.rs
ULTRON_Q_COMPLETE/ultron/crates/ultron-ghost/src/: crypto.rs  listener.rs
ULTRON_Q_COMPLETE/ultron/crates/ultron-insight-pulse/src/: main.rs
ULTRON_Q_COMPLETE/ultron/crates/ultron-types/src/: events.rs  insight.rs  pattern.rs
ULTRON_Q_COMPLETE/ultron/python/: bridge_test.py  test_insight_pulse.py
tools/browser_extension/: README.md  background.js  manifest.json
(+114 files in other folders)
