[workspace]
resolver = "2"
members = [
    "crates/ultron-types",
    "crates/ultron-quantum-log",
    "crates/ultron-core",
    "crates/ultron-insight-pulse",
    "crates/ultron-memory-engine",
    "crates/ultron-ghost",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
rust-version = "1.78"
authors    = ["Priyanshu"]
license    = "MIT"
repository = "local"

[workspace.dependencies]
# async runtime
tokio              = { version = "1.40", features = ["full"] }
futures-util       = "0.3"

# serialization
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"

# errors / logging
thiserror          = "1.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"

# time / ids
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1.10", features = ["v4", "serde"] }

# storage
rusqlite           = { version = "0.32", features = ["bundled", "blob", "chrono"] }

# crypto / encoding
blake3             = "1.5"
hex                = "0.4"
# AES-256-GCM for Module Q (Ghost Network) inter-peer frames. RustCrypto
# ecosystem — same maintainers as `blake3`, no OpenSSL dependency.
aes-gcm            = "0.10"
rand               = "0.8"

# discovery
# mdns-sd is pure Rust (no AF_UNIX or system mDNS dependency) — works in
# sandboxed CI and on Windows where the OS doesn't ship a daemon.
mdns-sd            = "0.11"
# OS hostname read — tiny utility crate, more reliable than env var
# scraping which differs between Windows (COMPUTERNAME) and *nix.
hostname           = "0.4"

# concurrency utils
crossbeam-channel  = "0.5"
parking_lot        = "0.12"
once_cell          = "1.20"
arc-swap           = "1.7"

# networking / HTTP / WS
axum               = { version = "0.7", features = ["ws"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["cors", "trace"] }
# Client-side WebSocket used by the Module-O sidecar (and any future Rust
# bridge consumer). `rustls-tls-native-roots` keeps us off OpenSSL.
tokio-tungstenite  = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
futures            = "0.3"

# fs / paths
dirs               = "5.0"

# image encoding (screenshots)
image              = { version = "0.25", default-features = false, features = ["png"] }

# windows
windows            = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-service    = "0.7"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1
debug     = true
