[package]
name                   = "ultron-ghost"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

description = "ULTRON Module Q — Ghost Network sidecar. Privacy-preserving LAN PUB/SUB over mDNS + AES-GCM TCP."

[[bin]]
name = "ultron-ghost"
path = "src/main.rs"

[dependencies]
ultron-types       = { path = "../ultron-types" }
ultron-quantum-log = { path = "../ultron-quantum-log" }

tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
futures            = { workspace = true }
futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }

# Crypto
aes-gcm            = { workspace = true }
blake3             = { workspace = true }
hex                = { workspace = true }
rand               = { workspace = true }

# Discovery
mdns-sd            = { workspace = true }
hostname           = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

chrono             = { workspace = true }
parking_lot        = { workspace = true }
dirs               = { workspace = true }
