[package]
name = "ultron-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[[bin]]
name = "ultron-core"
path = "src/main.rs"

[dependencies]
ultron-types       = { path = "../ultron-types" }
ultron-quantum-log = { path = "../ultron-quantum-log" }

tokio              = { workspace = true }
futures-util       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
chrono             = { workspace = true }
crossbeam-channel  = { workspace = true }
parking_lot        = { workspace = true }
once_cell          = { workspace = true }
arc-swap           = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
uuid               = { workspace = true }
dirs               = { workspace = true }
image              = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows         = { workspace = true }
windows-service = { workspace = true }
