[package]
name = "ultron-quantum-log"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[dependencies]
ultron-types  = { path = "../ultron-types" }
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
blake3        = { workspace = true }
hex           = { workspace = true }
parking_lot   = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
